@@ -1,6 +1,6 @@
 {% load crowdsourcing %}
 
-{% thanks_for_entering entered request forms survey %}
+{% thanks_for_entering request forms survey %}
 
 {% if not entered or not valid %}
   {% for form in forms %}
