@@ -8,7 +8,7 @@
 
 <h1>{{ survey.title }}</h1>
 
-{% thanks_for_entering entered request forms survey %}
+{% thanks_for_entering request forms survey %}
 <p>{% firstof survey.description survey.tease %} </p>
 
 {% if forms %}
