@@ -1,4 +1,7 @@
 Backwards incompatible changes
+* The thanks_for_entering template tag no longer takes the first parameter called "entered". The function signature is now (request, forms, survey)
+
+Backwards incompatible changes
 * The SurveyReport model has a new field featured = models.BooleanField(default=False). You will need to add this field to the SurveyReport table.
 * The google_map(display, question, ids) template tag is now google_map(display, question, report).
 * The survey_report.html and embeded_survey_report.html templates no longer get the "ids" context variable.
